<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/include_center_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="50px"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_register_username"
            android:layout_width="160px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30px"
            android:text="用户名"
            android:textColor="@color/gray_black"
            android:textSize="18px" />

        <cn.snowman.chat.common.view.AutoCleanEditText
            android:id="@+id/et_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="30px"
            android:layout_marginStart="30px"
            android:background="@null"
            android:drawableRight="@mipmap/clear_32"
            android:hint="@string/hint_username"
            android:singleLine="true"
            android:textSize="18px" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginEnd="30px"
        android:layout_marginStart="30px"
        android:background="@color/gray_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_marginTop="30px"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_register_password"
            android:layout_width="160px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30px"
            android:text="密码"
            android:textColor="@color/gray_black"
            android:textSize="18px" />

        <cn.snowman.chat.common.view.AutoCleanEditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="30px"
            android:layout_marginStart="30px"
            android:background="@null"
            android:drawableRight="@mipmap/clear_32"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"
            android:textSize="18px" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginEnd="30px"
        android:layout_marginStart="30px"
        android:background="@color/gray_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_marginTop="30px"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_register_password_sure"
            android:layout_width="160px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30px"
            android:text="再次输入密码"
            android:textColor="@color/gray_black"
            android:textSize="18px" />

        <cn.snowman.chat.common.view.AutoCleanEditText
            android:id="@+id/et_register_password_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="30px"
            android:layout_marginStart="30px"
            android:background="@null"
            android:drawableRight="@mipmap/clear_32"
            android:hint="@string/hint_password_sure"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"
            android:textSize="18px" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginEnd="30px"
        android:layout_marginStart="30px"
        android:background="@color/gray_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="30px"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_register_email"
            android:layout_width="160px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30px"
            android:text="邮箱"
            android:textColor="@color/gray_black"
            android:textSize="18px" />

        <cn.snowman.chat.common.view.AutoCleanEditText
            android:id="@+id/et_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="30px"
            android:layout_marginStart="30px"
            android:background="@null"
            android:drawableRight="@mipmap/clear_32"
            android:hint="@string/hint_xuantian"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="18px" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginEnd="30px"
        android:layout_marginStart="30px"
        android:background="@color/gray_bg" />

    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20px"
        android:layout_marginStart="20px"
        android:layout_marginTop="50px"
        android:background="@drawable/btn_blue_selector"
        android:text="注册"
        android:textColor="@color/white"
        android:textSize="18px" />

</LinearLayout>