<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/include_center_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="50px"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_login_username"
                android:layout_width="140px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30px"
                android:text="用户名"
                android:textColor="@color/gray_black"
                android:textSize="18px" />

            <cn.snowman.chat.common.view.AutoCleanEditText
                android:id="@+id/et_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="30px"
                android:layout_marginStart="30px"
                android:background="@null"
                android:drawableRight="@mipmap/clear_32"
                android:hint="@string/hint_username"
                android:singleLine="true"
                android:textSize="18px" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginEnd="30px"
            android:layout_marginStart="30px"
            android:background="@color/gray_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_marginTop="30px"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_login_password"
                android:layout_width="140px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30px"
                android:maxLength="20"
                android:singleLine="true"
                android:text="密码"
                android:textColor="@color/gray_black"
                android:textSize="18px" />

            <cn.snowman.chat.common.view.AutoCleanEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="30px"
                android:layout_marginStart="30px"
                android:background="@null"
                android:drawableRight="@mipmap/clear_32"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textSize="18px" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginEnd="30px"
            android:layout_marginStart="30px"
            android:background="@color/gray_bg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px" >

            <Button
                android:id="@+id/btn_froget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30px"
                android:background="@null"
                android:text="忘记密码"
                android:textColor="@color/gray_8"
                android:textSize="16px" />

            <Button
                android:id="@+id/btn_login_register"
                android:layout_width="80px"
                android:layout_height="80px"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30px"
                android:background="@null"
                android:text="注册"
                android:textColor="@color/gray_8"
                android:textSize="16px" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login_login"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="20px"
            android:layout_marginStart="20px"
            android:layout_marginTop="50px"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18px"
            android:background="@drawable/btn_blue_selector"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20px"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20px"
                android:layout_marginStart="30px"
                android:layout_toStartOf="@+id/tv_login_third_party_text"
                android:background="@color/gray_bg" />

            <TextView
                android:id="@+id/tv_login_third_party_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="三方登录"
                android:textColor="@color/gray_black"
                android:textSize="18px" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30px"
                android:layout_marginStart="20px"
                android:layout_toEndOf="@+id/tv_login_third_party_text"
                android:background="@color/gray_bg" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>